@@ -33,7 +33,7 @@ const std::string CLIENT_NAME("PHC");
 // git will put "#define GIT_ARCHIVE 1" on the next line inside archives. 
 #define GIT_ARCHIVE 1
 #ifdef GIT_ARCHIVE
-#    define GIT_COMMIT_ID "TEST-1"
+#    define GIT_COMMIT_ID "TEST-2"
 #endif
 
 #define BUILD_DESC_FROM_COMMIT(maj,min,rev,build,commit) \
